--- a/package.json
+++ b/package.json
@@ -3,20 +3,84 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "vite"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/muditchoudhary/petMe.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/muditchoudhary/petMe/issues"
   },
   "homepage": "https://github.com/muditchoudhary/petMe#readme",
-  "description": "",
+  "description": "A place for pet lovers to help pets from danger and save their lives.",
   "devDependencies": {
-    "tailwindcss": "^3.1.7"
-  }
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.8",
+    "vite": "^3.0.4"
+  },
+  "dependencies": {
+    "acorn": "^7.4.1",
+    "acorn-node": "^1.8.2",
+    "acorn-walk": "^7.2.0",
+    "anymatch": "^3.1.2",
+    "arg": "^5.0.2",
+    "binary-extensions": "^2.2.0",
+    "braces": "^3.0.2",
+    "camelcase-css": "^2.0.1",
+    "chokidar": "^3.5.3",
+    "color-name": "^1.1.4",
+    "cssesc": "^3.0.0",
+    "defined": "^1.0.0",
+    "detective": "^5.2.1",
+    "didyoumean": "^1.2.2",
+    "dlv": "^1.1.3",
+    "fast-glob": "^3.2.11",
+    "fastq": "^1.13.0",
+    "fill-range": "^7.0.1",
+    "function-bind": "^1.1.1",
+    "glob-parent": "^6.0.2",
+    "has": "^1.0.3",
+    "is-binary-path": "^2.1.0",
+    "is-core-module": "^2.10.0",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "lilconfig": "^2.0.6",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.5",
+    "minimist": "^1.2.6",
+    "nanoid": "^3.3.4",
+    "normalize-path": "^3.0.0",
+    "object-hash": "^3.0.0",
+    "path-parse": "^1.0.7",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "pify": "^2.3.0",
+    "postcss-import": "^14.1.0",
+    "postcss-js": "^4.0.0",
+    "postcss-load-config": "^3.1.4",
+    "postcss-nested": "^5.0.6",
+    "postcss-selector-parser": "^6.0.10",
+    "postcss-value-parser": "^4.2.0",
+    "queue-microtask": "^1.2.3",
+    "quick-lru": "^5.1.1",
+    "read-cache": "^1.0.0",
+    "readdirp": "^3.6.0",
+    "resolve": "^1.22.1",
+    "reusify": "^1.0.4",
+    "run-parallel": "^1.2.0",
+    "source-map-js": "^1.0.2",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "to-regex-range": "^5.0.1",
+    "util-deprecate": "^1.0.2",
+    "xtend": "^4.0.2",
+    "yaml": "^1.10.2"
+  },
+  "keywords": [
+    "pets"
+  ]
 }
