--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint:styles": "npx stylelint '**/*.css'"
   },
   "dependencies": {
+    "framer-motion": "^10.2.4",
     "history": "^5.3.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
