--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "@babel/polyfill": "^7.12.1",
+        "bcrypt": "^5.1.0",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "date": "^1.0.2",
@@ -31,8 +32,10 @@
         "express-mongo-sanitize": "^2.1.0",
         "express-rate-limit": "^5.5.1",
         "fs": "0.0.1-security",
+        "geoip-lite": "^1.4.7",
         "helmet": "^4.6.0",
         "hpp": "^0.2.3",
+        "jsonwebtoken": "^9.0.0",
         "mongoose": "^5.13.12",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
