--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "intersection-observer": "^0.12.2",
     "jest": "^29.5.0",
     "jsdom": "latest",
     "postcss": "^8.4.21",
