--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "mocha --recursive --exit",
         "start": "node server.js",
         "start:dev": "nodemon server.js"
     },
@@ -18,6 +18,7 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.26.1",
+        "mocha": "^10.2.0",
         "nodemon": "^2.0.14",
         "prettier": "^2.4.1"
     },
@@ -34,6 +35,7 @@
         "geoip-lite": "^1.4.7",
         "helmet": "^4.6.0",
         "hpp": "^0.2.3",
+        "jest": "^29.7.0",
         "mongoose": "^5.13.12",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
