--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,14 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "test": "mocha --recursive --exit",
+        "test": "nyc --reporter=text mocha",
         "start": "node server.js",
         "start:dev": "nodemon server.js"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "dotenv": "^16.4.1",
         "eslint": "^8.1.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.2",
@@ -18,8 +19,8 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.26.1",
-        "mocha": "^10.2.0",
-        "nodemon": "^2.0.14",
+        "nodemon": "^2.0.22",
+        "nyc": "^15.1.0",
         "prettier": "^2.4.1"
     },
     "dependencies": {
@@ -27,19 +28,20 @@
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "date": "^1.0.2",
-        "dotenv": "^10.0.0",
-        "express": "^4.17.1",
+        "express": "^4.18.2",
         "express-mongo-sanitize": "^2.1.0",
         "express-rate-limit": "^5.5.1",
         "fs": "0.0.1-security",
         "geoip-lite": "^1.4.7",
         "helmet": "^4.6.0",
         "hpp": "^0.2.3",
-        "jest": "^29.7.0",
-        "mongoose": "^5.13.12",
+        "mocha": "^10.2.0",
+        "mongodb-memory-server": "^9.1.6",
+        "mongoose": "^5.13.22",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
         "promisify": "0.0.3",
+        "supertest": "^6.3.4",
         "util": "^0.12.4",
         "validator": "^13.7.0",
         "xss-clean": "^0.1.1"
